change - actualiza css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="grid-container">
-        <div class="header box">
+        <div class="header">
             <p>Mi Ecommerce</p>
         </div>
-        <div class="asideBar box">
+        <div class="asideBar">
             <p class="titulo">Categorías</p>
             <div class="line">
                 <p class="seccion">Perfumes</p>
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="main box">
+        <div class="main">
             <div class="card">
                 <div class="cardImagen">
                     <img src="./assets/img/perfume01.jpeg" alt="" />
@@ -67,10 +67,11 @@
                 <div class="cardComprar"><button>Comprar</button></div>
             </div>
         </div>
-        <div class="footer box">
+        <div class="footer">
             <p>@miecommerce</p>
         </div>
     </div>
+    
 </body>
 
 </html>
